tests/resources/invalid/type/function/wrong_exception.mamba
class Err1(msg: String) isa Exception(msg)
class Err2(msg: String) isa Exception(msg)

def f(x: Int) -> Int raises [Err1] =>
    if x = 0 then
        x + 5
    else
        raise Err2("Not zero")
